
----- this version -----

Added feature to display "all users" for the user admin screen.

Fixed bug with creating new users that caused their access level to
be set to null instead of the value entered.

Added title to the heading of the page for ticket and project views.

Added the "note" type to the ticket types.  This type will auto-close
when created, preventing the need for a user to close it.  Thus, it 
is stored only for documentation.

Fixed issue with the "first login" so that it will make users
change their password from the default before they can continue

Comments added to configVars.php section to indicate
better use of Oracle/adodb methods

setenv() functions added for locale related issues, and for oracle
fixes


----- v2.0.1c beta (05-01-02) ------

All upper case column names changed to lower case 
entries for oracle/adodb compatibility

Fixed bug in new project form concerning the start date.

----- v2.0.1 Beta (04-27-02) ------
  
Oracle issue with uppercase column names (hopefully) overcome 
with use of the ADODB function "oci8po"

Fix for ONAMES and HOSTNAMES provided by Izzy (thanks Izzy!)
  
Oracle build files tested and repaired.  Several bugs with
reserved words and escape characters removed.

configVars.php and header.php files cleaned up, and better
commented.

Sybase bug with reserved word "role" fixed.

INSTALL.README, and install.html files updated

CHANGELOG implemented (and needed)

----- v2.0 Beta (04-23-02) ------
  
Too many changes to list!
  
Added ADODB abstraction, making zenTrack fully 
Database Compatible.
  
Completely rewrote the zenTrack.class, much cleaner, 
  more efficient, faster

Added the zen.class for basic utilities
  
Added attachments
  
Rewrote the administrative tools, and completely 
  re-dedesigned the database structure to support
  a very dynamic base and adaptable design
  
Began code changes to create a complete level based
  debugging tool and for report generation (planned for
  version 2.1)