@@ -12,14 +12,14 @@
 	   header("Location:$rootUrl/misc/pwc.php");
 
   if( !$login_id ) {
-     if( $username && isset($password) ) {
-	$login_id = $zen->login_user( $username, $password );
+     if( $username && isset($passphrase) ) {
+	$login_id = $zen->login_user( $username, $passphrase );
 	if( $login_id && $zen->demo_mode != "on" 
 			&& $zen->user["initials"] != "GUEST" 
-			&& $zen->encval($zen->user["lname"]) == $zen->encval($password) ) {
+			&& $zen->encval($zen->user["lname"]) == $zen->encval($passphrase) ) {
 	   // this will redirect the user
 	   // to a login screen where they can
-	   // change their password, since it is 
+	   // change their passphrase, since it is 
 	   // set to the default
 	   $login_level = 'first_login';
 	   $login_name  = $zen->user["fname"]." ".$zen->user["lname"];
@@ -32,17 +32,22 @@
 	   // and generate session variables, as well
 	   // as a cookie to save time logging in
 	   // in the future
-	   setcookie("zentrackUsername", $username, time()+2592000, "/", ".$HTTP_HOST");
-	   $skip = 1;
-	   unset($TODO);
 	   $login_level = $zen->user["access_level"];
 	   $login_name  = $zen->user["fname"]." ".$zen->user["lname"];
 	   $login_inits = $zen->user["initials"];
 	   $login_bin   = $zen->user["homebin"];
+	   setcookie("zentrackUsername", $username, time()+2592000, "/", ".$HTTP_HOST");
+	   $skip = 1;
+	   unset($TODO);
+	   $zen->addDebug("login.php:userLogin",
+	     "User logged in: $login_id,$login_name,$login_level",3);
 	} else {
 	   // generate an error message and let them try again
-	   $msg = "<p>&nbsp;</p><ul><b>That password didn't work.</b></ul>";
+	   $msg = "<p>&nbsp;</p><ul><b>That passphrase didn't work.</b></ul>";
 	}
+     } else {
+   	$zen->addDebug("login.php:userLogin",
+	  "User not logged in, username and passphrase not detected, so creating login form",3);
      }
   
      // user isn't logged in, so show the login form
