@@ -110,12 +110,12 @@ params</td><td class='lineCell' valign=top>262</td><td class='commentCell' valig
 <tr><td colspan=4 class='subTitle'>D</td></tr>
 <tr bgcolor='#FFFFFF'>
 <td class='nameCell' valign=top>DB</td><td class='valueCell' valign=top>
-host = ''<br>user = ''<br>password = ''<br>database = ''</td><td class='lineCell' valign=top>332</td><td class='commentCell' valign=top>INVOKE
+host = ''<br>user = ''<br>passphrase = ''<br>database = ''</td><td class='lineCell' valign=top>332</td><td class='commentCell' valign=top>INVOKE
 </td>
 </tr>
 <tr bgcolor='#DFDFDF'>
 <td class='nameCell' valign=top>db_connect</td><td class='valueCell' valign=top>
-host = ''<br>user = ''<br>password = ''<br>database = ''</td><td class='lineCell' valign=top>302</td><td class='commentCell' valign=top>DB RELATED
+host = ''<br>user = ''<br>passphrase = ''<br>database = ''</td><td class='lineCell' valign=top>302</td><td class='commentCell' valign=top>DB RELATED
 </td>
 </tr>
 <tr bgcolor='#FFFFFF'>
