@@ -210,9 +210,9 @@ params</td><td class='lineCell' valign=top>982</td><td class='commentCell' valig
 <br>then it will also run add_access()
 <br>with this array once the user has
 <br>been created
-<br>if [&quot;password&quot;] is given, it should
+<br>if [&quot;passphrase&quot;] is given, it should
 <br>be the unencrypted value.. if blank,
-<br>[&quot;password&quot;] will be set automatically
+<br>[&quot;passphrase&quot;] will be set automatically
 <br>to the users last name until that user
 <br>logs into the system and changes it
 </td>
@@ -680,7 +680,7 @@ bins<br>params = ''<br>sort = 'lname<br>fname'</td><td class='lineCell' valign=t
 <tr><td colspan=4 class='subTitle'>L</td></tr>
 <tr bgcolor='#DFDFDF'>
 <td class='nameCell' valign=top>login_user</td><td class='valueCell' valign=top>
-username<br>password</td><td class='lineCell' valign=top>1198</td><td class='commentCell' valign=top>perform a login check for username and password
+username<br>passphrase</td><td class='lineCell' valign=top>1198</td><td class='commentCell' valign=top>perform a login check for username and passphrase
 <br>returns the user's uid
 </td>
 </tr>
