@@ -5,12 +5,12 @@
   <form method="post" action="<?=$SCRIPT_NAME?>">
   <input type=text name=username value='<?=strip_tags($zentrackUsername)?>' width=20 maxlength=20>&nbsp;Login Name
   <br>
-  <input type=password name=password width=20 maxlength=20>&nbsp;Password
+  <input type="password" name="passphrase" width=20 maxlength=20>&nbsp;Password
   <p>
   <input type=hidden name=redirect value='<?=$redirect?>'>
   <input type=submit name=TODO value="Log On">
   </form>
   <p>
-  <i style="color:red">Login and password are case sensitive</i>
+  <i style="color:red">Login and passphrase are case sensitive</i>
   <P>Visit the zenTrack development site: <a href='http://sourceforge.net/projects/zentrack/'>http://sourceforge.net/projects/zentrack/</a>
 </blockquote>
