@@ -255,7 +255,7 @@ class zen extends zenDate {
    
    function encval( $text ) {
       // creates an encrypted value suitable
-      // for password use
+      // for passphrase use
       // abstracted to prevent problems
       // with future versions
       return( md5($text) );
